<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.easyhome.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
	<item
	    android:id="@+id/action_search"
	    android:orderInCategory="100"
	    android:title="@string/action_search"
	    android:icon="@drawable/ic_action_search"
	    app:showAsAction="ifRoom"
		app:actionViewClass="android.support.v7.widget.SearchView"/>
	<item 
	    android:id="@+id/action_refresh"
	    android:orderInCategory="100"
	    android:title="@string/action_refresh"
	    android:icon="@drawable/ic_action_refresh"
	    app:showAsAction="ifRoom"/>
	<item 
	    android:id="@+id/action_help"
	    android:orderInCategory="100"
	    android:title="@string/action_help"
	    android:icon="@drawable/ic_action_help"
	    app:showAsAction="ifRoom"/>
	
	    
	    
</menu>
