<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.easyhome.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button2"
        android:layout_marginTop="21dp"
        android:background="@drawable/back_button"
        android:onClick="onButton3"
        android:text="@string/Light"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/back_button"
        android:onClick="onButton1"
        android:text="@string/Tap_Watch"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_button"
        android:onClick="onButton2"
        android:text="@string/Tap_Listen"
        android:textColor="#ffffff" />

</RelativeLayout>
